--- a/Projects/Pizza Site/css/main.scss
+++ b/Projects/Pizza Site/css/main.scss
@@ -7,10 +7,16 @@ body{
         width: 100vw;
         height: 10vh;
         background-color: aliceblue;
-        box-shadow: 0px 10px 10px black;
+        box-shadow: 0px 10px 10px rgb(77, 77, 77);
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        gap: 25vw;
         align-items: center;
+        
+        @media (max-width:$telefonW) {
+            gap:15vw;
+
+        }
         .element > img{
             object-fit:contain;
             width: 12vw;
@@ -18,15 +24,16 @@ body{
             @media (max-width:$tabletaW) {
                 width: 14vw;
                 height: 12vh;
-                margin-left: 1.5vw;
+                
             }
             @media (max-width:$telefonW) {
                 width: 20vw;
                 height: 12vh;
-                margin-left: 2vw;
+                
             }
         }
         .element .btn_red{
+            
             width: 10vw ;
             height: 5vh;
             background-color: rgb(231, 33, 33);
@@ -37,16 +44,20 @@ body{
                 background-color:rgb(216, 60, 60) ;
             }
             @media (max-width:$tabletaW) {
+               
+                
                 width: 20vw;
             }
             @media (max-width:$telefonW) {
+                
+                
                 width: 25vw;
             }
         }
         .element.hamburger .ham{
             width: 35px;
             height: 35px;
-            margin-right:1vw ;
+            
             background-color: aliceblue;
             border: 2px solid rgba(169, 169, 169,0.5);
             border-radius:3px ;
@@ -58,8 +69,8 @@ body{
             }
             @media (max-width:$telefonW) {
                 width: 9vw;
-                height: 4vh;
-                margin-right:2vw ;
+                height: auto;
+                
             }
             &:hover:active{
                 background-color:rgb(216, 60, 60) ;
@@ -75,10 +86,85 @@ body{
 }
 .drop_down{
     width: 100vw;
-    height: 10vh;
+    height: auto;
     background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid rgba(0, 0, 0,0.6);
+    margin-bottom:1vh ;
+    justify-content: center;
+    align-items: end;
 
     &.dF{
-        display: none;
+        opacity: 0;
     }
+   
+    .dis_none{
+        margin-right:4vw ;
+        
+        
+    }
+    
+}
+.carusel{
+    width: 100vw;
+    height: 35vh;
+    background-color: rgba(128, 128, 128,0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    .caruselFoto{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .mySlides >img{
+       width: 70vw;
+       height: 30vh;
+    
+    }
+    .dot {
+        height: 15px;
+        width: 15px;
+        margin-top: 1vh;
+        
+        background-color: #949393;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+    .active, .dot:hover {
+        background-color: #4b4b4b;
+      }
+}
+
+.mainContent{
+    width: 100vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+
+    .mainConstainer{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        @media (max-width: $tabletaW) {
+            flex-direction: column;
+            gap: 2vh;
+        }
+    }
+    .element{
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
 }
