--- a/CSS/styleCv.css
+++ b/CSS/styleCv.css
@@ -163,18 +163,24 @@ i{
 .b{
     width: auto;
     height: 1.6vh;
-    background-color: #989da6;
-    border: 3px solid #989da6 ;
+    background-color: #62656a;
+    border: 3px solid #62656a ;
     border-radius: 10px;
     box-shadow: 0px 0 3px;
     padding: 0.2vh 0.3vw;
     display: flex;
     align-items: center;
+    color: whitesmoke;
 }
 
 @media (max-width:700px) {
     body{
         font-size: 0.8rem;
+        
+    }
+    body:link{
+        text-decoration: none;
+        color:inherit;
     }
     h1{
         font-size: 0.8rem;
